# AlpacaBot

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: bot_testing.yaml  bot_testing.yml  dependabotautomerge.yml
src/: group_event.rs  listener.rs  main.rs  poll_response.rs  scheduler.rs
tests/integration/: test_integration.rs
tests/unit/: test_group_event.rs  test_listener.rs  test_poll_response.rs  test_scheduler.rs  test_unit.rs
