[package]
name = "alpaca_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.4"
tokio = { version = "1.42.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
dotenv = { version = "0.15.0", features = ["cli"] }
clokwerk = "0.4.0"
