[package]
name = "alpaca_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.0", features = ["framework"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
clokwerk = "0.4.0"
poise = "0.6.1"
